k8s/catalog.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod-cluster
  annotations:
    kompose.cmd: kompose convert -f docker-compose-global.yml --out k8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/docker-eshopnet: "true"
    io.kompose.service: catalog
  name: catalog
spec:
  containers:
    - env:
        - name: CONFIG_SERVICE_PASSWORD
          value: cfg-password
        - name: CONFIG_SERVICE_USER
          value: user
        - name: EUREKA_USER
          value: user
        - name: POSTGRES_USER
          value: dbuser
        - name: SPRING_PROFILES_ACTIVE
          value: docker
      image: h4mdi/catalog
      name: catalog
      resources: {}
  restartPolicy: OnFailure
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: catalog
