k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: docker
            - name: CONFIG_SERVICE_USER
              value: "user"
            - name: CONFIG_SERVICE_PASSWORD
              value: "cfg-password"
            - name: EUREKA_USER
              value: "user"
          image: h4mdi/gateway:latest
          name: api-gateway
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always

status: {}
---
apiVersion: v1
kind: Service
metadata:
  namespace: prod-cluster
  name: gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: gateway
