k8s/payment.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod-cluster
  annotations:
    kompose.cmd: kompose convert -f docker-compose.services.yml --out k8s_2
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/docker-eshopnet: "true"
    io.kompose.service: payment
  name: payment
spec:
  containers:
    - env:
        - name: CONFIG_SERVICE_PASSWORD
          value: cfg-password
        - name: CONFIG_SERVICE_USER
          value: user
        - name: EUREKA_USER
          value: user
        - name: POSTGRES_USER
          value: dbuser
        - name: SPRING_PROFILES_ACTIVE
          value: docker
      image: h4mdi/payment
      name: payment
      resources: {}
  restartPolicy: OnFailure
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: ClusterIP
  ports:
    - port: 8087
      targetPort: 8087
  selector:
    app: payment
