k8s/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod-cluster
  annotations:
    kompose.cmd: kompose convert -f docker-compose-global.yml --out k8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/docker-eshopnet: "true"
    io.kompose.service: redis
  name: redis
spec:
  containers:
    - env:
        - name: REDIS_PASSWORD
          value: pass
      image: redis:6.2.4
      name: redis
      ports:
        - containerPort: 6379
      resources: {}
  restartPolicy: OnFailure
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-global.yml --out k8s
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
